--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": ">=1.2.*",
     "angular-material": "latest",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-base64-upload": "^0.1.22",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
